# llm-task-scheduler

./: .gitignore  README.md  pyproject.toml  scheduler.prompt.yml  verbalizer.prompt.yml
data/: inference_data.csv  metrics_summary.csv  new_tasks.csv  summary_calendar_unique.csv  tasks.csv  tasks_processed.csv  tasks_summary.csv  title_calendar_unique.csv  title_unique.csv
data/fixed/: formatted_tasks.csv  translated_tasks.csv  verbalized_tasks.csv
data/results/: 10_last_tasks_scheduling_results.csv  month_scheduling_results.csv  week_scheduling_results.csv
notebooks/: calendar.ipynb  convert_data.ipynb  drop_columns.ipynb  nesa.ipynb  pre-processing.ipynb  summary.ipynb  translate_task.ipynb  verbalize_summary.ipynb
notebooks/llm/: gemini.ipynb  gpt.ipynb  metrics.ipynb
notebooks/nesa/: title_layer.ipynb
src/: main.py
src/llm/: llm.py
