[tool.poetry]
name = "llm-task-scheduler"
version = "0.1.0"
description = "LLM Task Scheduler - A task scheduling application using LLM"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.0"
pandas = "^2.0.0"
pyyaml = "^6.0.1"
openai = "^1.97.1"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.1.0"
jupyter = "^1.0.0"
ipykernel = "^6.0.0"
